--- a/WindowsFormsApp3/WindowsFormsApp3.csproj
+++ b/WindowsFormsApp3/WindowsFormsApp3.csproj
@@ -56,7 +56,9 @@
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.23.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Renci.SshNet, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106" />
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
@@ -75,6 +77,12 @@
     <Reference Include="Zstandard.Net, Version=1.1.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormGuiNhanBuuPham.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGuiNhanBuuPham.Designer.cs">
+      <DependentUpon>FormGuiNhanBuuPham.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormGuiNhanLieuKe.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +100,9 @@
       <DependentUpon>rpcDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="FormGuiNhanBuuPham.resx">
+      <DependentUpon>FormGuiNhanBuuPham.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormGuiNhanLieuKe.resx">
       <DependentUpon>FormGuiNhanLieuKe.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,7 +118,7 @@
     <EmbeddedResource Include="ReportGuiNhanLieuKe.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report1.rdlc">
+    <EmbeddedResource Include="ReportGuiNhanBPham.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -149,6 +160,10 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="GuiNhanBuuPham\" />
+    <Folder Include="GuiNhanLieuKe\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
