Add Gui buu Pham report

--- a/WindowsFormsApp3/WindowsFormsApp3.csproj
+++ b/WindowsFormsApp3/WindowsFormsApp3.csproj
@@ -77,6 +77,12 @@
     <Reference Include="Zstandard.Net, Version=1.1.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSetGuiNhanBuuPham.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetGuiNhanBuuPham.xsd</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="FormGuiNhanBuuPham.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,20 @@
     <EmbeddedResource Include="ReportGuiNhanBPham.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <None Include="DataSetGuiNhanBuuPham.xsc">
+      <DependentUpon>DataSetGuiNhanBuuPham.xsd</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSetGuiNhanBuuPham.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetGuiNhanBuuPham.Designer.cs</LastGenOutput>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSetGuiNhanBuuPham.xss">
+      <DependentUpon>DataSetGuiNhanBuuPham.xsd</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
