--- a/WindowsFormsApp3/App.config
+++ b/WindowsFormsApp3/App.config
@@ -6,6 +6,9 @@
         <add name="WindowsFormsApp3.Properties.Settings.rpcConnectionString"
             connectionString="server=localhost;user id=root;database=rpc"
             providerName="MySql.Data.MySqlClient" />
+        <add name="WindowsFormsApp3.Properties.Settings.rpcConnectionString1"
+            connectionString="server=localhost;user id=root;database=rpc;password=hsv1;persistsecurityinfo=True"
+            providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
